Redone tutorial videos, added audio

--- a/Views/Help/Index.cshtml
+++ b/Views/Help/Index.cshtml
@@ -28,7 +28,7 @@
 
         <div class="video-tutorial">
             <video width="500" controls>
-                <source src="~/Videos/Add user to subscription group.mp4" type="video/mp4">
+                <source src="~/Videos/Adding a user.mp4" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
         </div>
@@ -42,9 +42,8 @@
 
         <div class="list-elements">
             <ol type="a">
-                <li>Click on the "Master Group" dropdown and choose "Select All".</li>
-                <li>Click on the "Group" dropdown and choose "Select All".</li>
-                <li>Select the Subscription Group ID in the "Group ID" dropdown. (Use the search bar in the dropdown!)</li>
+                <li>Click on the "Master Group" dropdown and choose the previous selected master group(s).</li>
+                <li>Click on the "Group" dropdown and choose the previous selected group(s) (Use the search bar in the dropdown!).</li>
                 <li>Click "View Data" to view all of the users tied to this Subscription Group.</li>
                 <li>Edit or Delete Users of your choice by clicking the Pencil or Garbage icon next to the user in the table.</li>
             </ol>
@@ -52,7 +51,7 @@
 
         <div class="video-tutorial">
             <video width="500" controls>
-                <source src="~/Videos/Verify subscription group.mp4" type="video/mp4">
+                <source src="~/Videos/verify users in group.mp4" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
         </div>
@@ -67,10 +66,11 @@
         <div class="list-elements">
             <ol type="a">
                 <li>Click on the "MarMaxx Reports Subscriptions" tab.</li>
-                <li>Click on "Add New Subscription".</li>
                 <li>Select the folder in which your desired report is in, or choose "Select All" in the "Folder" dropdown.</li>
                 <li>Select the desired report in the "Report Name" dropdown (use the search bar in the dropdown if you can't find it).</li>
-                <li>The report parameters will now load, and their default values will be selected.</li>
+                <li>If the banner dropdown loads with data, select a banner to load the table, otherwise the table will load automatically.</li>
+                <li>Click on "Add New Subscription".</li>
+                <li>The report and it's parameters will now load, and their default values will be selected.</li>
                 <li>Enter a name for the subscription, then select the group to which you added the user to earlier.</li>
                 <li>Scroll through the rest of the parameters and select values of your choice.</li>
                 <li>Click on "Save MarMaxx Report Subscription".</li>
@@ -79,7 +79,7 @@
 
         <div class="video-tutorial">
             <video width="500" controls>
-                <source src="~/Videos/Add report subscription.mp4" type="video/mp4">
+                <source src="~/Videos/Adding a report subscription.mp4" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
         </div>
@@ -96,16 +96,44 @@
                 <li>Ensure that you are on the "MarMaxx Reports Subscriptions" tab.</li>
                 <li>Select the folder in which your report subscription's report is in, or choose "Select All" in the "Folder" dropdown.</li>
                 <li>Select the report from the subscription in the "Report Name" dropdown (use the search bar in the dropdown if you can't find it).</li>
-                <li>The data will now load and be displayed in a table.</li>
-                <li>You can delete a subscription with the garbage icon, and you can edit it with the pencil icon.</li>
-                <li>You can create a copy of a report subscription by clicking the paper icon, and you can modify it before saving.</li>
+                <li>If the banner dropdown loads with data, select a banner to load the table, otherwise the table will load automatically.</li>
+                <li>You can delete a subscription with the garbage icon </li>
                 <li>If there is an ellipses (...), you can click on it to expand and view the rest of the data.</li>
             </ol>
         </div>
 
         <div class="video-tutorial">
             <video width="500" controls>
-                <source src="~/Videos/Verify report subscriptions.mp4" type="video/mp4">
+                <source src="~/Videos/viewing report subscriptions.mp4" type="video/mp4">
+                Your browser does not support HTML video.
+            </video>
+        </div>
+    </div>
+</div>
+
+<div class="page-header">
+    <div class="page-title">
+        <h1 class="title-text">Other Features</h1>
+    </div>
+</div>
+
+<div class="subscription-steps">
+    <div class="individual-step">
+        <h5>1. Editing a Report Subscription</h5>
+
+        <div class="list-elements">
+            <ol type="a">
+                <li>Follow the steps for "Verify Report Subscription" to load the table.</li>
+                <li>Click on the pencil icon in the table entry of the subscription you want to edit.</li>
+                <li>The edit screen will load and all values will have their previously selected values.</li>
+                <li>Make your desired edits to the parameters of the report subscription.</li>
+                <li>Click on "Save Edited MarMaxx Report Subscription" when finished.</li>
+            </ol>
+        </div>
+
+        <div class="video-tutorial">
+            <video width="500" controls>
+                <source src="~/Videos/editing a report subscription.mp4" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
         </div>
@@ -113,4 +141,81 @@
 
     <div class="separator-line-help">
     </div>
+
+    <div class="individual-step">
+        <h5>2. Copying a Report Subscription</h5>
+
+        <div class="list-elements">
+            <ol type="a">
+                <li>Follow the steps for "Verify Report Subscription" to load the table.</li>
+                <li>Click on the paper icon in the table entry of the subscription you want to copy.</li>
+                <li>The copy screen will load and all values will have their previously selected values.</li>
+                <li>Make your desired edits (if any) to the parameters of the report subscription.</li>
+                <li>Click on "Save New MarMaxx Report Subscription" when finished.</li>
+                <li>A new entry should appear in the loaded table with the new report subscription.</li>
+            </ol>
+        </div>
+
+        <div class="video-tutorial">
+            <video width="500" controls>
+                <source src="~/Videos/copying a report subscription.mp4" type="video/mp4">
+                Your browser does not support HTML video.
+            </video>
+        </div>
+    </div>
+
+    <div class="separator-line-help">
+    </div>
+
+
+    <div class="individual-step">
+        <h5>3. Adding a New Group and Master Group</h5>
+
+        <div class="list-elements">
+            <ol type="a">
+                <li>If you have Admin access to this application, you will be able to add or remove master groups.</li>
+                <li>Click on the "Admin" tab in the top right of the screen.</li>
+                <li>To add a new master group, enter a value in the text box and click "Add Master Group".</li>
+                <li>The master group should be added to the Master Group table, and the Master Group dropdown above.</li>
+                <li>To add a new group, select a master group, then enter a value for Group ID and Group Name.</li>
+                <li>Clicking "Add Group" will add it to the Group table.</li>
+                <li>These new added Groups and Master Groups will now be accessible throughout the application.</li>
+                <li>NOTE: Deleting a Group or Master Group will remove your ability to see data tied to them. It is recommended to delete all related data first.</li>
+            </ol>
+        </div>
+
+        <div class="video-tutorial">
+            <video width="500" controls>
+                <source src="~/Videos/Adding a new master group or group.mp4" type="video/mp4">
+                Your browser does not support HTML video.
+            </video>
+        </div>
+    </div>
+
+    <div class="separator-line-help">
+    </div>
+
+
+    <div class="individual-step">
+        <h5>4. Editing a User</h5>
+
+        <div class="list-elements">
+            <ol type="a">
+                <li>Follow "Verify the Subscription Group's Users Before Creating the Subscription" to load the table.</li>
+                <li>Click on the pencil icon in the table entry of the user you want to edit.</li>
+                <li>You are able to edit the email, the group, and the master group of the user.</li>
+                <li>If the group dropdown is disabled, try making a change to the master group dropdown first.</li>
+                <li>Click "Submit User" when you are finished with your edits.</li>
+                <li>The edited user will now appear in the table.</li>
+            </ol>
+        </div>
+
+        <div class="video-tutorial">
+            <video width="500" controls>
+                <source src="~/Videos/how to edit a user.mp4" type="video/mp4">
+                Your browser does not support HTML video.
+            </video>
+        </div>
+    </div>
+
 </div>
