Loading sierra reports subscriptions and saving them in session

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a id="MarMaxxReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="MarMaxxReports" asp-action="Index">MarMaxx Reports Subscriptions</a>
                         </li>
                         <li class="nav-item">
-                            <a id="SierraReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SierraReports" asp-action="Index" hidden>Sierra Reports Subscriptions</a>
+                            <a id="SierraReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SierraReports" asp-action="Index">Sierra Reports Subscriptions</a>
                         </li>
                         <li class="nav-item help">
                             <a id="Help_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="Help" asp-action="Index"> <i class="fas fa-question-circle"></i> Help</a>
@@ -51,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - eComm_Reporting_Application
+            &copy; 2022 - eComm_Reporting_Application
         </div>
     </footer>
 
@@ -74,7 +74,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap-multiselect.js"></script>
     <script src="~/lib/data-tables/datatables.min.js"></script>
-    @RenderSection("Scripts", required: false)
+    @RenderSection("Scripts", required: true)
 </body>
 
 
