--- a/Views/SierraReports/Index.cshtml
+++ b/Views/SierraReports/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model eComm_Reporting_Application.Models.ReportPageDropdownModel
+@{
     ViewData["Title"] = "Sierra Reports Subscriptions";
 }
 @section Scripts{
