--- a/Views/SierraReports/Index.cshtml
+++ b/Views/SierraReports/Index.cshtml
@@ -38,9 +38,9 @@
 <div class="separator-line">
 </div>
 
-<div class="addNew">
-    <h4 class="addNewText" onclick="location.href='@Url.Action("AddNewReportSub", "SierraReports")'">Add New Subscription</h4>
-    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewReportSub", "SierraReports")'"></i></button>
+<div class="addNew" id="addNewDiv">
+    <h4 class="addNewText">Add New Subscription</h4>
+    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle"></i></button>
 </div>
 
 <div id="sierraSubscriptionData">
