Session fix for UserSubscription Table Data

--- a/Views/Help/Index.cshtml
+++ b/Views/Help/Index.cshtml
@@ -23,6 +23,7 @@
                 <li>Select a master group to view it's subscription groups.</li>
                 <li>Select the Subscription Group that the User will be added to, then click "Submit User".</li>
                 <li>Note: You can add the User to multiple groups - the dropdown box allows you to select multiple.</li>
+                <li>Note: The User's Email must be of TJX domain (tjx.com, tjxcanada.ca, tjxeurope.com)</li>
             </ol>
         </div>
 
