--- a/Views/MarMaxxReports/Index.cshtml
+++ b/Views/MarMaxxReports/Index.cshtml
@@ -13,7 +13,7 @@
 
 <div class="page-header">
     <div class="page-title">
-        <h1 class="title-text">MarMaxx Report Subscriptions</h1>
+        <h1 class="title-text">MarMaxx/HG Report Subscriptions</h1>
     </div>
 </div>
 
