--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,10 +27,10 @@
                             <a id="SubscriptionGroups_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SubscriptionGroups" asp-action="Index">User Subscription Groups</a>
                         </li>
                         <li class="nav-item">
-                            <a id="MarMaxxReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="MarMaxxReports" asp-action="Index">MarMaxx Reports Subscriptions</a>
+                            <a id="MarMaxxReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="MarMaxxReports" asp-action="Index">MarMaxx/HG Report Subscriptions</a>
                         </li>
                         <li class="nav-item">
-                            <a id="SierraReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SierraReports" asp-action="Index">Sierra Reports Subscriptions</a>
+                            <a id="SierraReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SierraReports" asp-action="Index" hidden>Sierra Report Subscriptions</a>
                         </li>
                         <li class="nav-item help">
                             <a id="Help_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="Help" asp-action="Index"> <i class="fas fa-question-circle"></i> Help</a>
