Session fix for Sierra

--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -16,7 +16,7 @@
 
 <div class="page-header">
     <div class="page-title">
-        <h1 class="title-text">Add New MarMaxx Report Subscription</h1>
+        <h1 class="title-text">Add New MarMaxx/HG Report Subscription</h1>
     </div>
 </div>
 
