--- a/Views/MarMaxxReports/EditReportSub.cshtml
+++ b/Views/MarMaxxReports/EditReportSub.cshtml
@@ -13,11 +13,11 @@
     <div class="page-title">
         @if (Model.isCopy == false)
         {
-            <h1 class="title-text">Edit MarMaxx Report Subscription</h1>
+            <h1 class="title-text">Edit MarMaxx/HG Report Subscription</h1>
         }
         else
         {
-            <h1 class="title-text">Copy MarMaxx Report Subscription</h1>
+            <h1 class="title-text">Copy MarMaxx/HG Report Subscription</h1>
         }
     </div>
 </div>
